--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,22 @@
 body {
-  font-family: 'Cuprum', sans-serif;
-  font-family: 'PT Sans', sans-serif;
+  margin: 0;
+  color: #000;
+  background-color: #fff;
+  font-family: 'PT Sans', Arial, sans-serif;
+}
+
+.main-header {
+  width: 100%;
+  height: 320px;
+  background-color: #f3f7f9;
+}
+
+.header-top {
+  background-color: #293449;
+}
+
+.container {
+  width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
 }
