--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body {
   color: #000;
   background-color: #fff;
   font-family: 'Cuprum', Arial, sans-serif;
+  font-weight: normal;
 }
 
 a {
@@ -19,6 +20,19 @@ ul {
   margin-right: auto;
 }
 
+.visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+}
+
+/* ============================ */
+/* ========== HEADER ========== */
+/* ============================ */
+
+
 .main-header {
   width: 100%;
   height: 320px;
@@ -30,13 +44,13 @@ ul {
 }
 
 .header-top a {
+  color: #fff;
   font-size: 17px;
   line-height: 18px;
-  color: #fff;
 }
 
 .header-top .header-logo {
-  position: absolute;
+/*  position: absolute;*/
   font-size: 24px;
   line-height: 24px;
   color: #fff;
@@ -46,15 +60,69 @@ ul {
   box-shadow: inset 0px -5px 0 0 rgba(0, 0, 0, 0.24);
 }
 
-.modal {
-  display: none;
+.header-logo:hover {
+  background-color: #ca2c37;
 }
 
-h1 {
+.header-logo:active {
+  background-color: #ba2732;
+}
+
+/* ========== ПОЛЕ ПОИСКА ========== */
+
+.search input {
+  border: 0;
+  background-color: #293449;
+}
+
+.search input:hover {
+  background-color: #212a3a;
+}
+
+.search input:active {
+  background-color: #293449;
+}
+
+.search input:focus {
+  color: #000;
+  background-color: #fff;
+}
+
+/* ========== ЗАКЛАДКИ и КОРЗИНА ========== */
+
+.book-cart:hover {
+  background-color: #212a3a;
+}
+
+.book-cart:active {
+  color: rgba(255, 255, 255, 0.6);
+  background-color: #161d29;
+}
+
+/* ========== ОФОРМИТЬ ЗАКАЗ ========== */
+
+.checkout {
+  background-color: #63a63e;
+}
+
+.checkout:hover {
+  background-color: #5fbb2d;
+}
+
+.checkout:active {
+  color: rgba(255, 255, 255, 0.5);
+  background-color: #518534;
+}
+
+/* ========== ЗАГОЛОВОК ГЛАВНОЙ СТРАНИЦЫ ========== */
+
+.heading {
   font-size: 16px;
   line-height: 23px;
   color: #ee3643;
 }
+
+/* ========== КОНТАКТЫ ========== */
 
 .header-contacts {
   
@@ -71,13 +139,25 @@ h1 {
   color: #32425c;
 }
 
+/* ========== ВХОД и РЕГИСТРАЦИЯ ========== */
+
 .user-login {
+  font-size: 21px;
 }
 
 .user-login a {
-  font-size: 21px;
   color: #000;
 }
+
+.user-login a:hover {
+  color: #ee3643;
+}
+
+.user-login a:active {
+  color: rgba(0, 0, 0, 0.3);
+}
+
+/* ========== ГЛАВНОЕ МЕНЮ ========== */
 
 .main-navigation {
   font-size: 17px;
@@ -89,6 +169,20 @@ h1 {
 .main-navigation a {
   color: #fff;
 }
+
+.main-navigation a:hover {
+  color: #fff;
+  background-color: #293449;
+}
+
+.main-navigation a:active {
+  color: rgba(255, 255, 255, 0.5);
+  background-color: #1d2739;
+}
+
+/* ================================ */
+/* ========== ПРОМО БЛОК ========== */
+/* ================================ */
 
 .promo a {
   text-transform: uppercase;
@@ -107,6 +201,15 @@ h1 {
   font-size: 14px;
   line-height: 18px;
   color: #fff;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.promo-top a:hover {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.promo-top a:active {
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .promo-item-1 {
@@ -120,6 +223,36 @@ h1 {
 .promo-item-3 {
   background-color: #dc91d8;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.modal {
+  display: none;
+}
+
+
+
+
+
+
+
+
+
+
 
 .gallery-content {
   
