--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,10 @@ ul {
   margin: -1px;
 }
 
+.btn {
+  
+}
+
 /* ============================ */
 /* ========== HEADER ========== */
 /* ============================ */
@@ -261,19 +265,105 @@ ul {
   background-color: #ba2732;
 }
 
+/* ========== ХИДЕР БЛОКА ========== */
 
+.header-block h2 {
+  color: #32425c;
+  font-size: 30px;
+  line-height: 30px;
+  text-transform: uppercase;
+}
 
+.header-block a {
+  color: #fff;
+  font-size: 14px;
+  line-height: 18px;
+  text-transform: uppercase;
+  background-color: #ee3643;
+}
 
+/* ========== ХИДЕР СЕРВИСОВ ========== */
 
+.header-services {
+  color: #000;
+}
 
+.header-services h2 {
+  font-size: 30px;
+  line-height: 30px;
+  text-transform: uppercase;
+}
 
+.header-services p {
+  font-size: 13px;
+  line-height: 24px;
+}
 
+/* ========== НАВИГАЦИЯ СЕРВИСОВ ========== */
 
+.services-navigation {
+  font-size: 21px;
+  line-height: 30px;
+}
 
+.services-navigation a {
+  color: #fff;
+  background-color: #32425c;
+}
 
+.services-navigation a:hover {
+  color: #fff;
+  background-color: #293449;
+}
 
+.services-navigation a:active {
+  color: #32425c;
+  background-color: #fff;
+}
 
+/* ========== ОПИСАНИЯ СЕРВИСОВ ========== */
 
+.services-description h3 {
+  font-size: 36px;
+  line-height: 36px;
+  color: #32425c;
+  text-transform: uppercase;
+}
+
+.services-description p {
+  font-size: 13px;
+  line-height: 24px;
+  color: #000;
+}
+
+/* ========== КОМПАНИЯ и КОНТАКТЫ ========== */
+
+.company-and-contacts h2 {
+  font-size: 30px;
+  line-height: 30px;
+  color: #000;
+  text-transform: uppercase;
+}
+
+.company-and-contacts p {
+  font-size: 13px;
+  line-height: 24px;
+  color: #000;
+}
+
+.list-orders a {
+  font-size: 18px;
+  line-height: 20px;
+  color: #000;
+}
+
+.company-and-contacts .btn {
+  font-size: 14px;
+  line-height: 17.5px;
+  color: #fff;
+  background-color: #ee3643;
+  text-transform: uppercase;
+}
 
 
 
