--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,14 @@ ul {
 }
 
 .container {
-  width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
+  width: 940px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
+.header-container {
+  display: flex;
+  flex-direction: column;
 }
 
 .visually-hidden {
@@ -39,12 +44,19 @@ ul {
 
 .main-header {
   width: 100%;
-  height: 320px;
+  min-height: 320px;
   background-color: #f3f7f9;
 }
 
 .header-top {
+  display: flex;
+  justify-content: space-between;
   background-color: #293449;
+}
+
+.header-middle {
+  display: flex;
+  justify-content: space-between;
 }
 
 .header-top a {
@@ -143,6 +155,8 @@ ul {
 /* ========== ВХОД и РЕГИСТРАЦИЯ ========== */
 
 .user-login {
+  display: flex;
+  justify-content: space-between;
   font-size: 21px;
 }
 
@@ -206,10 +220,17 @@ ul {
 /* ========== ГЛАВНОЕ МЕНЮ ========== */
 
 .main-navigation {
+  margin: 0;
+  padding: 0;
   font-size: 17px;
   line-height: 17px;
   background-color: #32425c;
   box-shadow: inset 0px -5px 0 0 rgba(0, 0, 0, 0.24);
+}
+
+.footer-top-navigation {
+  display: flex;
+  justify-content: space-between;
 }
 
 .main-navigation a {
@@ -231,6 +252,11 @@ ul {
 /* ================================ */
 
 /* ========== ВЕРХНИЙ ========== */
+
+.promo-list {
+  display: flex;
+  justify-content: space-between;
+}
 
 .promo-list h3 {
   color: #fff;
@@ -268,6 +294,11 @@ ul {
 
 /* ========== ПРАВЫЙ ========== */
 
+.promo-right .promo-list {
+  display: flex;
+  flex-direction: column;
+}
+
 .promo-item-4 {
   background-color: #8ed78f;
 }
@@ -277,6 +308,11 @@ ul {
 }
 
 /* ========== СЛАЙДЕР ========== */
+
+.promo-bottom {
+  display: flex;
+  justify-content: space-between;
+}
 
 .gallery-content {
   
@@ -310,6 +346,11 @@ ul {
 
 /* ========== ХИДЕР БЛОКА ========== */
 
+.header-block {
+  display: flex;
+  justify-content: space-between;
+}
+
 .header-block h1 {
   color: #32425c;
   font-size: 30px;
@@ -333,6 +374,10 @@ ul {
 }
 
 /* ========== КАРТОЧКИ ТОВАРОВ ========== */
+
+.goods-list {
+  display: flex;
+}
 
 .catalog-item {
   font-family: 'PT Sans', Arial, sans-serif;
@@ -359,6 +404,13 @@ ul {
   color: #fff;
   font-weight: bold;
   background-color: #ee3643;
+}
+
+/* ========== БРЭНДЫ ========== */
+
+.brands-list {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 /* ========== ХИДЕР СЕРВИСОВ ========== */
@@ -402,6 +454,11 @@ ul {
 
 /* ========== ОПИСАНИЯ СЕРВИСОВ ========== */
 
+.services-description {
+  display: flex;
+  justify-content: space-between;
+}
+
 .services-description h3 {
   font-size: 36px;
   line-height: 36px;
@@ -416,6 +473,11 @@ ul {
 }
 
 /* ========== КОМПАНИЯ и КОНТАКТЫ ========== */
+
+.company-and-contacts {
+  display: flex;
+  justify-content: space-between;
+}
 
 .company-and-contacts h2 {
   font-size: 30px;
@@ -452,11 +514,27 @@ ul {
   background-color: #32425c;
 }
 
-.footer-bottom {
+.footer-bottom-block {
   background-color: #293449;
 }
 
+.footer-bottom {
+  display: flex;
+  justify-content: space-between;
+}
+
+
+.footer-middle {
+  display: flex;
+  justify-content: space-between;
+}
+
 /* ========== ЛОГОТИП ========== */
+
+.footer-top {
+  display: flex;
+  justify-content: space-between;
+}
 
 .main-footer .footer-logo {
   font-size: 30px;
@@ -493,6 +571,11 @@ ul {
 
 /* ========== ВЕРХНЯЯ НАВИГАЦИЯ ФУТЕРА ========== */
 
+.footer-top-nav {
+  display: flex;
+  justify-content: space-between;
+}
+
 .footer-top-nav a {
   color: #f3f7f9;
 }
@@ -507,6 +590,11 @@ ul {
 }
 
 /* ========== НИЖНЯЯ НАВИГАЦИЯ ФУТЕРА ========== */
+
+.footer-bottom-nav {
+  display: flex;
+  justify-content: space-between;
+}
 
 .footer-bottom-nav a {
   color: #ffd180;
