--- a/css/style.css
+++ b/css/style.css
@@ -175,6 +175,16 @@ ul {
 /* ========== ЮЗВЕРЬ МЕНЮ (КАТАЛОГ) ========== */
 
 .user-menu-exit {
+  display: flex;
+  justify-content: space-between;
+}
+
+.user-menu {
+  display: flex;
+  justify-content: space-between;
+}
+
+.user-menu-exit {
   font-size: 21px;
 }
 
@@ -207,6 +217,8 @@ ul {
 /* ========== ХЛЕБНЫЕ КРОШКИ ========== */
 
 .breadcrumbs-catalog {
+  display: flex;
+  justify-content: flex-start;
   font-family: 'PT Sans', Arial, sans-serif;
   font-size: 13px;
   line-height: 18px;
@@ -228,7 +240,8 @@ ul {
   box-shadow: inset 0px -5px 0 0 rgba(0, 0, 0, 0.24);
 }
 
-.footer-top-navigation {
+.footer-top-navigation,
+.site-navigation {
   display: flex;
   justify-content: space-between;
 }
@@ -346,31 +359,46 @@ ul {
 
 /* ========== ХИДЕР БЛОКА ========== */
 
-.header-block {
+.header-block-main {
   display: flex;
   justify-content: space-between;
+  background-color: #f9f5f0;
+  color: #32425c;
 }
 
-.header-block h1 {
-  color: #32425c;
+.header-block-main h2 {
   font-size: 30px;
   line-height: 30px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  margin-left: 30px;
   text-transform: uppercase;
 }
 
-.header-block h2 {
-  color: #32425c;
-  font-size: 30px;
-  line-height: 30px;
-  text-transform: uppercase;
-}
-
-.header-block a {
+.header-block-main a {
+  margin: auto;
+  margin-right: 24px;
   color: #fff;
   font-size: 14px;
   line-height: 18px;
   text-transform: uppercase;
   background-color: #ee3643;
+}
+
+.catalog-h1 {
+  display: flex;
+  justify-content: space-between;
+  background-color: #f2f6f8;
+  color: #32425c;
+}
+
+.catalog-h1 h1 {
+  font-size: 30px;
+  line-height: 30px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  margin-left: 30px;
+  text-transform: uppercase;
 }
 
 /* ========== КАРТОЧКИ ТОВАРОВ ========== */
