--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ ul {
   display: flex;
   justify-content: flex-end;
   background-color: #293449;
+  margin-bottom: 46px;
 }
 
 .header-middle {
@@ -65,8 +66,8 @@ ul {
   color: #fff;
   font-size: 17px;
   line-height: 18px;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top: 14px;
+  padding-bottom: 13px;
   min-width: 150px;
   text-align: center;
 }
@@ -100,8 +101,8 @@ ul {
   width: 270px;
   font-size: 17px;
   line-height: 18px;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top: 14px;
+  padding-bottom: 13px;
 }
 
 .search input:hover {
@@ -179,23 +180,36 @@ ul {
   font-size: 16px;
   line-height: 23px;
   color: #ee3643;
+  margin: 0;
+  padding-left: 50px;
+  margin-right: 71px;
 }
 
 /* ========== КОНТАКТЫ ========== */
 
 .header-contacts {
-  
+  display: flex;
+  flex-direction: column;
+  margin-right: 69px;
 }
 
 .header-contacts a {
   font-size: 21px;
-  color: #ee3643;
+  line-height: 21px;
+  letter-spacing: 0.42px;
+  color: #e9292a;
+  border: 3px solid #fff;
+  text-align: center;
+  width: 264px;
+  padding-top: 13px;
+  padding-bottom: 11px;
 }
 
 .header-contacts p {
-  font-size: 16px;
-  line-height: 23px;
+  font-size: 14px;
+  line-height: 24px;
   color: #32425c;
+  margin: 0;
 }
 
 /* ========== ВХОД и РЕГИСТРАЦИЯ ========== */
@@ -204,10 +218,20 @@ ul {
   display: flex;
   justify-content: space-between;
   font-size: 21px;
+  line-height: 21px;
 }
 
 .user-login a {
   color: #000;
+  background-color: #fff;
+  padding-left: 25px;
+  padding-right: 25px;
+  padding-top: 14px;
+  padding-bottom: 15px;
+}
+
+.user-login li:first-child {
+  margin-right: 10px;
 }
 
 .user-login a:hover {
