безуспешная попытка сделать слайдер

--- a/css/style.css
+++ b/css/style.css
@@ -34,22 +34,22 @@ img {
 input[type="checkbox"].visually-hidden,
 input[type="radio"].visually-hidden {
   position: absolute;
-  
+
   width: 1px;
   height: 1px;
   margin: -1px;
   border: 0;
   padding: 0;
-  
+
   white-space: nowrap;
-  
+
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
 
 .btn {
-  
+
 }
 
 /* ============================ */
@@ -192,18 +192,18 @@ input[type="radio"].visually-hidden {
 
 .book-cart::before {
   content: "";
-  
+
   position: absolute;
   top: 12px;
   left: 17px;
-  
+
   width: 15px;
   height: 16px;
-  
+
   background-image: url("../img/sprites/icon-bookmark.svg");
   background-repeat: no-repeat;
   background-position: 0 0;
-  
+
   opacity: 0.3;
 }
 
@@ -246,6 +246,7 @@ input[type="radio"].visually-hidden {
   font-size: 16px;
   line-height: 23px;
   color: #ee3643;
+  width: 196px;
   margin: 0;
   padding-left: 50px;
   margin-right: 71px;
@@ -260,15 +261,33 @@ input[type="radio"].visually-hidden {
 }
 
 .header-contacts a {
+  position: relative;
   font-size: 21px;
   line-height: 21px;
   letter-spacing: 0.42px;
   color: #e9292a;
   border: 3px solid #fff;
   text-align: center;
-  width: 264px;
+  width: auto;
   padding-top: 13px;
+  padding-left: 71px;
+  padding-right: 49px;
   padding-bottom: 11px;
+}
+
+.header-contacts a::before {
+  content: "";
+
+  position: absolute;
+  top: 13px;
+  left: 15px;
+
+  width: 19px;
+  height: 19px;
+
+  background-image: url("../img/sprites/icon-phone.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
 }
 
 .header-contacts p {
@@ -285,6 +304,7 @@ input[type="radio"].visually-hidden {
   justify-content: space-between;
   font-size: 21px;
   line-height: 21px;
+  padding: 0;
 }
 
 .user-login a {
@@ -315,14 +335,14 @@ input[type="radio"].visually-hidden {
 
 .enter::before {
   content: "";
-  
+
   position: absolute;
   top: 17px;
   left: 14px;
-  
+
   width: 20px;
   height: 17px;
-  
+
   background-image: url("../img/sprites/icon-login.svg");
   background-repeat: no-repeat;
   background-position: 0 0;
@@ -461,14 +481,14 @@ input[type="radio"].visually-hidden {
 
 .promo-list .promo-item-1::before {
   content: "";
-  
+
   position: absolute;
   top: 31px;
   right: 43px;
-  
+
   width: 44px;
   height: 65px;
-  
+
   background-image: url("../img/sprites/icon-1.svg");
   background-repeat: no-repeat;
   background-position: 0 0;
@@ -476,14 +496,14 @@ input[type="radio"].visually-hidden {
 
 .promo-list .promo-item-2::before {
   content: "";
-  
+
   position: absolute;
   top: 33px;
   right: 28px;
-  
+
   width: 75px;
   height: 61px;
-  
+
   background-image: url("../img/sprites/icon-2.svg");
   background-repeat: no-repeat;
   background-position: 0 0;
@@ -491,14 +511,14 @@ input[type="radio"].visually-hidden {
 
 .promo-list .promo-item-3::before {
   content: "";
-  
+
   position: absolute;
   top: 31px;
   right: 31px;
-  
+
   width: 78px;
   height: 62px;
-  
+
   background-image: url("../img/sprites/icon-3.svg");
   background-repeat: no-repeat;
   background-position: 0 0;
@@ -506,14 +526,14 @@ input[type="radio"].visually-hidden {
 
 .promo-right .promo-item-4::before {
   content: "";
-  
+
   position: absolute;
   top: 26px;
   right: 45px;
-  
+
   width: 59px;
   height: 72px;
-  
+
   background-image: url("../img/sprites/icon-4.svg");
   background-repeat: no-repeat;
   background-position: 0 0;
@@ -521,14 +541,14 @@ input[type="radio"].visually-hidden {
 
 .promo-right .promo-item-5::before {
   content: "";
-  
+
   position: absolute;
   top: 32px;
   right: 31px;
-  
+
   width: 78px;
   height: 63px;
-  
+
   background-image: url("../img/sprites/icon-5.svg");
   background-repeat: no-repeat;
   background-position: 0 0;
@@ -639,47 +659,156 @@ input[type="radio"].visually-hidden {
   background-color: #ffc047;
 }
 
-/* ========== СЛАЙДЕР ========== */
-
-.gallery {
-  width: 620px;
-}
-
 .promo-bottom {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin-bottom: 53px;
 }
 
-.gallery-content {
+/* ========== СЛАЙДЕР ========== */
+
+.slider {
+  position: relative;
+  width: 620px;
+  padding-top: 27px;
+  padding-left: 25px;
+  padding-right: 25px;
+  padding-bottom: 22px;
+  background-color: #eeeeee;
+  margin-right: 20px;
+  box-sizing: border-box;
+}
+
+.slider-controls {
+  position: absolute;
+  left: 50%;
+  bottom: 36px;
+  z-index: 100;
+
+  width: 160px;
+  height: 10px;
+
+  text-align: center;
+  font-size: 0;
+  transform: translateX(-50%);
+}
+
+.slider-controls i {
+  position: relative;
+
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  padding: 6px;
+
+  border-radius: 50%;
+  cursor: pointer;
+
+  /* Временно для демонстрации */
+  background-color: red;
+}
+
+.slider-controls .active::before {
+  content: "";
+
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  z-index: 2;
+
+  width: 6px;
+  height: 6px;
+  margin: -6px;
+
+  background-color: inherit;
+  border: 2px solid #c1c1c1;
+  border-radius: 50%;
+}
+
+.slider-controls i::after {
+  content: "";
+
+  position: absolute;
+  top: 6px;
+  left: 6px;
+  z-index: 1;
+
+  width: 18px;
+  height: 18px;
+
+  background: #ffffff;
+
+  border-radius: 50%;
+}
+
+.slider-list {
   margin: 0;
+  padding: 0;
+
+  list-style: none;
 }
 
-.gallery-header h3 {
+.slider-item {
+  display: none;
+}
+
+.slider-item:nth-child(1) {
+  display: block;
+}
+
+.slider-item:nth-child(1) {
+  background-image: url("../img/jamshut.jpg");
+  background-repeat: no-repeat;
+}
+
+.slider-item h3 {
+  margin: 0;
+  margin-bottom: 5px;
+
   font-size: 36px;
   line-height: 36px;
   text-transform: uppercase;
 }
 
-.gallery-header p {
-  font-size: 18px;
-  line-height: 24px;
+.slider-item p {
+  margin: 0;
+/*  margin-bottom: 38px; */
 }
 
-.gallery a {
-  color: #fff;
-  font-size: 14px;
+.button {
+  display: block;
+  width: 195px;
+  padding: 13px 0;
+
+  font-size: 16px;
   line-height: 18px;
-  background-color: #ee3643;
+  color: #ffffff;
+  text-transform: uppercase;
+  text-align: center;
+  text-decoration: none;
+
+  background-color: #fb565a;
+  border-radius: 3px;
+  border: none;
 }
 
-.gallery a:hover {
-  background-color: #ca2c37;
+.button:hover,
+.button:focus {
+  background-color: #e74246;
 }
 
-.gallery a:active {
-  background-color: #ba2732;
+.button:active {
+  color: rgba(255, 255, 255, 0.3);
+
+  background-color: #d7373b;
+  box-shadow: 0 3px rgba(0, 0, 0, 0.1) inset;
 }
+
+
+
+
+
 
 /* ========== ХИДЕР БЛОКА ========== */
 
@@ -731,17 +860,53 @@ input[type="radio"].visually-hidden {
 .brands-list {
   display: flex;
   flex-wrap: wrap;
+  padding: 0;
+  margin: 0;
+  margin-right:-20px;
+  margin-bottom: 85px;
+}
+
+.brands-list li {
+
+}
+
+.brands-list a {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 220px;
+  min-height: 145px;
+  text-align: center;
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
+
+/* ========== СЕРВИСЫ ========== */
+
+.delivery-and-services {
+  background-color: #f4f7f9;
+}
+
+.services-description {
+
 }
 
 /* ========== ХИДЕР СЕРВИСОВ ========== */
 
 .header-services {
+  width: 398px;
+  height: auto;
+  padding-top: 68px;
+  margin-bottom: 74px;
   color: #000;
 }
 
 .header-services h2 {
   font-size: 30px;
   line-height: 30px;
+  margin: 0;
+  margin-bottom: 34px;
   text-transform: uppercase;
 }
 
